added note to readme to note euler method replacements.

--- a/README.html
+++ b/README.html
@@ -53,3 +53,5 @@ Drag and drop the extracted folder onto the mknrndll icon.  Drag and
 drop the mosinit.hoc file on the nrngui icon to start the simulations.
 
 The model files were supplied by Alain Destexhe.
+
+20110406 updated to use methods cnexp and derivimplicit over euler
